@@ -3,6 +3,7 @@ qtbase-opensource-src (5.15.9+dfsg-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream release.
   * Drop CVE-2022-25255.diff, included in the new release.
+  * Refresh other patches.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 13 Apr 2023 20:25:28 +0300
 
